test-suite/typecheck/pass/nested_generic.first
import * "Prelude"
function id<T>(x: T) -> T { return x; }
function f() -> Array<Int> {
  let a: Array<Int> = [1, 2, 3];
  return id(a);
}
