test-suite/typecheck/fail/array_element_type_mismatch.first
interaction main() -> Unit {
  let a: Array<Int> = [1, "two", 3];
  return;
}
